--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     />
   </head>
   <body>
-    <!-- <div id="blocker">
+    <div id="blocker">
       <h2>Enter Password to Access Case Study</h2>
       <input type="password" id="password" placeholder="Enter Password" />
       <button onclick="checkPassword()">Submit</button>
       <p id="errorMessage" style="color: red" class="hidden">
         Incorrect password. Try again.
       </p>
-    </div> -->
+    </div>
 
     <main id="caseStudy">
       <div class="hero-section">
