--- a/index.html
+++ b/index.html
@@ -515,6 +515,6 @@
       </div>
     </main>
 
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
